paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-2/sample_003/target.compile.log
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `num_complex`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-2/sample_003/target.rs:34:39
   |
34 | static cld: AlignedC128 = AlignedC128(num_complex::Complex::new(0.0, 0.0));
   |                                       ^^^^^^^^^^^ use of unresolved module or unlinked crate `num_complex`
   |
   = help: you might be missing a crate named `num_complex`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `num_complex`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/gcc_c11_tests/c11-align-2/sample_003/target.rs:25:20
   |
25 | struct AlignedC128(num_complex::Complex<f64>); // Approximation for _Complex long double
   |                    ^^^^^^^^^^^ use of unresolved module or unlinked crate `num_complex`
   |
   = help: you might be missing a crate named `num_complex`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.